-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8254171 | openjdk8u282 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
Since "8030350: Enable additional compiler warnings for GCC", the hotspot build issues warnings:
src/share/vm/compiler/compilerOracle.cpp: In function 'bool scan_line(const char*, char*, MethodMatcher::Mode*, char*, MethodMatcher::Mode*, int*, const char*&)':
src/share/vm/compiler/compilerOracle.cpp:425: warning: format not a string literal, argument types not checked
src/os/linux/vm/os_linux.cpp: In function 'jlong slow_thread_cpu_time(Thread*, bool)':
src/os/linux/vm/os_linux.cpp:5316: warning: format not a string literal, argument types not checked
Also, gccs 4.2.2 and before can not build hotspot any more. They don't know the option introduced in that change:
cc1plus: error: unrecognized command line option "-Wno-error=format-nonliteral"
Solution:
Fix the warning in the hotspot code and remove the flag from the makefiles.
src/share/vm/compiler/compilerOracle.cpp: In function 'bool scan_line(const char*, char*, MethodMatcher::Mode*, char*, MethodMatcher::Mode*, int*, const char*&)':
src/share/vm/compiler/compilerOracle.cpp:425: warning: format not a string literal, argument types not checked
src/os/linux/vm/os_linux.cpp: In function 'jlong slow_thread_cpu_time(Thread*, bool)':
src/os/linux/vm/os_linux.cpp:5316: warning: format not a string literal, argument types not checked
Also, gccs 4.2.2 and before can not build hotspot any more. They don't know the option introduced in that change:
cc1plus: error: unrecognized command line option "-Wno-error=format-nonliteral"
Solution:
Fix the warning in the hotspot code and remove the flag from the makefiles.
- backported by
-
JDK-8254171 Fix warning "format not a string literal"
-
- Resolved
-
- duplicates
-
JDK-8036120 Fix warning "format not a string literal"
-
- Closed
-
- relates to
-
JDK-8037816 Fix for 8036122 breaks build with Xcode5/clang
-
- Resolved
-
-
JDK-8256720 Clang builds are broken after 8036122
-
- Open
-
-
JDK-8030350 Enable additional compiler warnings for GCC
-
- Resolved
-