8036122: Fix warning 'format not a string literal'

Reviewed-by: mduigou, kvn